--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "~5.4",
+
         "symfonypress/symfonypress": "~0.1",
         "symfonypress/installer": "~0.1",
         "wordpress/wordpress": "~3.5"
@@ -19,5 +21,10 @@
             "type": "composer",
             "url": "https://raw.github.com/SymfonyPress/ComposerRepository/master/packages.json"
         }
-    ]
+    ],
+    "autoload": {
+        "files": [
+            "app/WordPressKernel.php"
+        ]
+    }
 }
