Committed changes to the symfony press app bundle.

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,10 @@
     "repositories": [
         {
             "type": "composer",
+            "url": "http://wpackagist.org"
+        },
+        {
+            "type": "composer",
             "url": "https://raw.github.com/SymfonyPress/ComposerRepository/master/packages.json"
         }
     ],
